--- a/Commerce.ipynb
+++ b/Commerce.ipynb
@@ -16,7 +16,7 @@
         "# ==============================\n",
         "# E-commerce Customer Behavior Analysis\n",
         "# ==============================\n",
-        "# Project 2 Mini Project - CX Data Analyst\n",
+        "# Mini Project - CX Data Analyst\n",
         "# Author: Do Tuan Kiet\n",
         "# Date: 2025\n",
         "# ==============================\n",
